# gentg-limb

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README - Copy.md  README.md  ci.yml  gitignore  pyproject.toml  requirements.txt
configs/: logging.yaml
configs/dataset/: human36m.yaml  mpi_inf_3dhp.yaml
configs/infer/: offline_seq.yaml  realtime_shortwin.yaml
configs/train/: aug.yaml  e2e_finetune.yaml  gpc_base.yaml  tgt_base.yaml
data/: README.md
data/scripts/: build_splits.py  common.py  extract_2d_keypoints.py  prepare_h36m.py  prepare_mpi_inf_3dhp.py
datasets/: __init__.py  cameras.py  collate.py  human36m.py  kinematics.py  mpi_inf_3dhp.py  transforms.py
docs/: configuration.md  configuration_reference.md  datasets.md  design_notes.md  evaluation.md  faq.md  index.md  inference.md  installation.md  training.md
examples/: realtime.yaml  small_gpu.yaml
losses/: diffusion_obj.py  limb_smooth.py  mpjpe.py  reprojection.py  symmetry.py
metrics/: __init__.py  eval_h36m.py  pck_auc.py  summary.py
models/common/: embeddings.py  graph_utils.py  mlp.py  norm_dropout.py  (+1 more)
notebooks/: 00_quickstart.ipynb  01_data_checks.ipynb  02_train_tgt_logs.ipynb  03_train_gpc_logs.ipynb  04_eval_plots.ipynb
scripts/: ablate_threshold.py  benchmark_speed.py  export.py  train_gpc.py  visualize_seq.py
tests/: test_embeddings.py  test_gpc_selective.py  test_graph_utils.py  test_losses.py  test_metrics.py  test_reprojection.py  test_tgt_forward.py
utils/: checkpoint.py  config.py  dist.py  logging.py  profiling.py  sched_optim.py  seed.py  timers.py  viz.py
(+12 files in other folders)
